[package]
name = "iota"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Bringing the real world to Web3 with a scalable, decentralized and programmable DLT infrastructure"

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
aws-config = "1.5"
aws-sdk-kms = "1.44.0"
axum.workspace = true
bcs.workspace = true
bip32.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete = { version = "4.5", optional = true }
colored.workspace = true
csv.workspace = true
diesel = { workspace = true, optional = true }
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
http.workspace = true
im.workspace = true
inquire = "0.6.0"
json_to_table.workspace = true
miette = { version = "7", features = ["fancy"] }
num-bigint.workspace = true
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rustyline = "14.0"
rustyline-derive = "0.10"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shell-words = "1.1.0"
signature.workspace = true
strum.workspace = true
tabled.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
unescape.workspace = true
url.workspace = true
uuid.workspace = true

# internal dependencies
bin-version.workspace = true
iota-bridge.workspace = true
iota-config.workspace = true
iota-execution.workspace = true
iota-faucet.workspace = true
iota-genesis-builder.workspace = true
iota-graphql-rpc = { workspace = true, optional = true }
iota-indexer = { workspace = true, optional = true }
iota-json.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-move.workspace = true
iota-move-build.workspace = true
iota-package-management.workspace = true
iota-protocol-config.workspace = true
iota-replay.workspace = true
iota-sdk.workspace = true
iota-source-validation.workspace = true
iota-swarm.workspace = true
iota-swarm-config.workspace = true
iota-transaction-builder.workspace = true
iota-types.workspace = true
move-analyzer.workspace = true
move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-command-line-common.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-vm-config.workspace = true
move-vm-profiler.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true

[target.'cfg(not(msim))'.dev-dependencies]
datatest-stable.workspace = true

[dev-dependencies]
# external dependencies
assert_cmd = "2.0.6"
expect-test.workspace = true
fs_extra.workspace = true
insta.workspace = true
insta-cmd = "0.6"
prometheus.workspace = true
serde_json.workspace = true
shlex = "1.3.0"

# internal dependencies
iota-macros.workspace = true
iota-metrics.workspace = true
iota-simulator.workspace = true
iota-test-transaction-builder.workspace = true
move-cli.workspace = true
test-cluster.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[[example]]
name = "generate-genesis-checkpoint"
path = "src/generate_genesis_checkpoint.rs"
test = false

[[test]]
name = "ptb_files_tests"
harness = false

[[test]]
name = "shell_tests"
harness = false

[features]
tracing = ["iota-types/tracing", "iota-execution/tracing"]
indexer = ["dep:diesel", "dep:iota-indexer", "dep:iota-graphql-rpc"]
gen-completions = ["dep:clap_complete"]
