[package]
name = "telemetry-subscribers"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Library for common telemetry and observability functionality"

[dependencies]
atomic_float = "1.0"
bytes.workspace = true
bytes-varint = "1.0"
clap.workspace = true
console-subscriber = { version = "0.4", optional = true }
crossterm.workspace = true
futures.workspace = true
once_cell.workspace = true
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
opentelemetry-proto = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus.workspace = true
prost = "0.13"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.12.3" }
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.28.0"
tracing-subscriber.workspace = true

[features]
default = []
tokio-console = ["console-subscriber"]

[dev-dependencies]
camino.workspace = true
